@@ -89,7 +89,7 @@ namespace SimpleInjector.Diagnostics
             lifestyles.Select(lifestyle => lifestyle.Name).ToCommaSeparatedText();
 
         private static string ToCommaSeparatedText(IEnumerable<InstanceProducer> producers) => 
-            producers.Select(r => r.ServiceType).Distinct().Select(TypeExtensions.ToFriendlyName)
+            producers.Select(r => r.ServiceType).Distinct().Select(TypesExtensions.ToFriendlyName)
                 .ToCommaSeparatedText();
     }
 }
