@@ -1,39 +1,0 @@
-﻿#region Copyright Simple Injector Contributors
-/* The Simple Injector is an easy-to-use Inversion of Control library for .NET
- * 
- * Copyright (c) 2016 Simple Injector Contributors
- * 
- * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and 
- * associated documentation files (the "Software"), to deal in the Software without restriction, including 
- * without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell 
- * copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the 
- * following conditions:
- * 
- * The above copyright notice and this permission notice shall be included in all copies or substantial 
- * portions of the Software.
- * 
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT 
- * LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO 
- * EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER 
- * IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE 
- * USE OR OTHER DEALINGS IN THE SOFTWARE.
-*/
-#endregion
-
-namespace SimpleInjector
-{
-    using System;
-
-    /// <summary>Useful extensions on <see cref="Type"/>.</summary>
-    public static class TypeExtensions
-    {
-        /// <summary>
-        /// Builds an easy to read type name. Namespaces will be omitted, and generic types will be displayed 
-        /// in a C#-like syntax. Ideal for reporting type names in exception messages.
-        /// </summary>
-        /// <param name="type">The type to convert.</param>
-        /// <returns>A human-readable string representation of that type.</returns>
-        /// <exception cref="ArgumentNullException">Thrown when the supplied argument is a null reference.</exception>
-        public static string ToFriendlyName(this Type type) => type.ToFriendlyName(fullyQualifiedName: false);
-    }
-}
