@@ -41,6 +41,8 @@ Version 4.0.0 (v4.0 RTM)
 		 an lifestyleSelector delegate. (fixes #341)
 		-[Core] InstanceProducer.FromExpression() added. (fixes #346)
 		-[Core] Prevented registered predicates (using RegisterConditional) from always being called twice. (fixes #346)
+		-[Core] TypesExtensions class added with three useful extension methods on Type: ToFriendlyName,
+		 IsClosedTypeOf and GetClosedTypesOf methods. (fixes #358)
 
 	Project Changes:
 		-Projects for SimpleInjector.dll merged into one single project.
